cabal-version:      2.2
name:               aws-arn
version:            0.1.0.0
synopsis:
  Types and optics for manipulating Amazon Resource Names (ARNs)

-- description:         See @README.md@
bug-reports:        http://github.com/tricycle/aws-arn/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jack Kelly <jack.kelly@bellroy.com>
maintainer:         Jack Kelly <jack.kelly@bellroy.com>
copyright:          Copyright (C) 2020-2021 Bellroy Pty Ltd
category:           AWS, Cloud
build-type:         Simple
extra-source-files: CHANGELOG.md

--, README.md
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.4

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind -O2

common deps
  build-depends:
    , base  >=4.12   && <4.15
    , lens  >=4.18.1 && <5.1
    , text  ^>=1.2.3

library
  import:          opts, deps
  exposed-modules:
    Network.AWS.ARN
    Network.AWS.ARN.Lambda

  build-depends:   hashable ^>=1.3.0.0
  hs-source-dirs:  src

test-suite spec
  import:             opts, deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Network.AWS.ARN.Lambda.Test
    Network.AWS.ARN.Test

  hs-source-dirs:     test
  ghc-options:        -threaded
  build-depends:
    , aws-arn
    , tasty           ^>=1.4.0.2
    , tasty-discover  ^>=4.2.2
    , tasty-hunit     ^>=0.10.0.3

  build-tool-depends: tasty-discover:tasty-discover -any

-- source-repository head
--   type:     git
--   location:
